# PATSMA

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Config.cmake.in  Doxyfile  LICENCE.md  README.md  config.cppcheck  cppcheck-suppressions.txt  parallel_rb.cpp
c_version/: autotuning.c  autotuning.h  csa.c  csa.h  neldermead.c  neldermead.h
example/: CMakeLists.txt  Conway.h  RBGaussSeidel-insideAT.cpp  RBGaussSeidel-noAT.cpp  RBGaussSeidel-outsideAT.cpp  parallel_rb.cpp
src/: Autotuning.cpp  Autotuning.hpp  Autotuning.tpp  CMakeLists.txt  CSA.cpp  CSA.hpp  NelderMead.cpp  NelderMead.hpp  NumericalOptimizer.hpp
test/: CMakeLists.txt  Test.hpp  runtests.sh  test-integrity.cpp
